Push to "work" at work

--- a/Ability Overview.html
+++ b/Ability Overview.html
@@ -58,7 +58,7 @@
         </p>
 <br>    <h3 id="IntroHeaders">4. Procs</h3>
         <p> Fingers of Frost is a proc granted by Frozen Orb & Frostbolt. Fingers of Frost causes your next Ice Lance to deal damage as if the target were frozen.</p>
-        <p> <img class="spell_icon" src="https://static.icy-veins.com/images/wow/large_icons/ability_mage_brainfreeze.jpg" alt="Brain Freeze Icon"> <a rel="nofollow" class="spell" href="https://beta.wowdb.com/spells/190447" data-tooltip-href="https://beta.wowdb.com/spells/190447">Brain Freeze</a> is a proc we gain from Frostbolt and Ebonbolt. Casting Flurry with a <img class="spell_icon" src="https://static.icy-veins.com/images/wow/large_icons/ability_mage_brainfreeze.jpg" alt="Brain Freeze Icon"> <a rel="nofollow" class="spell" href="https://beta.wowdb.com/spells/190447" data-tooltip-href="https://beta.wowdb.com/spells/190447">Brain Freeze</a> proc is instant and applies Winter's Chill which makes your spells treat the target as if frozen for the duration of the debuff.</p>
+        <p> Brain Freeze is a proc we gain from Frostbolt and Ebonbolt. Casting Flurry with a Brain Freeze proc is instant and applies Winter's Chill which makes your spells treat the target as if frozen for the duration of the debuff.</p>
         <!-- Cooldowns -->
 <br>    <h3 id="IntroHeaders">5. Cooldowns</h3>
         <p> Icy Veins is your main cooldown ability, it grants us 30% haste for 20 seconds. Icy Veins now also grants Frigid Grasp from your Azerite traits which increases your intellect for 10 seconds and also grants on charge of Fingers of Frost</p>
@@ -67,20 +67,21 @@
         <p> Shatter is a passive that increases the critical strike chance of your spells against frozen targets. Targets can be frozen or treated as frozen in different ways e.g. casting Ice Lance while Fingers of Frost is active</p>
     </div>
     <div class="GuideTableOfContents">
-        <br>
-<br>    <h3 id="IntroHeaders">7. Navigation</h3>
-        <p>Please continue to your desired location</p>
-            <ul class="GuideTableOfContentsList">
-                <li> <a href="Guide.html" class="GuideList">Guide Home</a></li>
-                <li> <a href="Introduction.html" class="GuideList">Overview</a></li>
-                <li> <a href="Introduction.html" class="GuideList">Ability Overview</a></li>
-                <li> <a href="Introduction.html" class="GuideList">Builds & Talents</a></li>
-                <li> <a href="Introduction.html" class="GuideList">Rotation</a></li>
-                <li> <a href="Introduction.html" class="GuideList">Cooldown Usage</a></li>
-                <li> <a href="Introduction.html" class="GuideList">Enchancements</a></li>
-                <li> <a href="Introduction.html" class="GuideList">Macros & Addons</a></li>
-                <li> <a href="Introduction.html" class="GuideList">Advanced</a></li>
-            </ul>
+            <br>
+            <h1>Guide Contents</h1> 
+            <p>Below is a list to all the things that will be covered within this guide. Please select one of the links to be redirected to the content:</p>
+                <ul class="GuideTableOfContentsList">
+                    <li> <a href="Index.html" class="GuideList">Home</a></li>
+                    <li> <a href="Introduction.html" class="GuideList">Introduction</a></li>
+                    <li> <a href="Overview.html" class="GuideList">Overview</a></li>
+                    <li> <a href="Ability Overview.html" class="GuideList">Ability Overview</a></li>
+                    <li> <a href="Builds & Talents.html" class="GuideList">Builds & Talents</a></li>
+                    <li> <a href="Rotation.html" class="GuideList">Rotation</a></li>
+                    <li> <a href="Cooldown Usage.html" class="GuideList">Cooldown Usage</a></li>
+                    <li> <a href="Enchancements.html" class="GuideList">Enchancements</a></li>
+                    <li> <a href="Macros & Addons.html" class="GuideList">Macros & Addons</a></li>
+                    <li> <a href="Advanced.html" class="GuideList">Advanced</a></li>
+                </ul>
     </div>
         <!-- JQuery script loads -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -92,3 +93,5 @@
 </body>
 </html>
 
+
+<!-- Replace spells with this format <img class="spell_icon" src="spell_images\ability_mage_brainfreeze.jpg" alt="Brain Freeze Icon"> <a rel="nofollow" class="spell" href="https://beta.wowdb.com/spells/190447" data-tooltip-href="https://beta.wowdb.com/spells/190447">Brain Freeze</a> -->
