--- a/Overview.html
+++ b/Overview.html
@@ -55,20 +55,21 @@
                 <p>Welcome to my guide. This guide has been created to provide you with all the information required to raid as a Frost Mage in World of Warcraft: Battle for Azeroth. </p>
     </div>
     <div class="GuideTableOfContents">
-        <br>
-        <h1>Navigation</h1> 
-        <p>Please continue to your desired location</p>
-            <ul class="GuideTableOfContentsList">
-                <li> <a href="Guide.html" class="GuideList">Guide Home</a></li>
-                <li> <a href="Overview.html" class="GuideList">Overview</a></li>
-                <li> <a href="Ability Overview.html" class="GuideList">Ability Overview</a></li>
-                <li> <a href="Builds & Talents.html" class="GuideList">Builds & Talents</a></li>
-                <li> <a href="Rotation.html" class="GuideList">Rotation</a></li>
-                <li> <a href="Cooldown Usage.html" class="GuideList">Cooldown Usage</a></li>
-                <li> <a href="Enchancements.html" class="GuideList">Enchancements</a></li>
-                <li> <a href="Macros & Addons.html" class="GuideList">Macros & Addons</a></li>
-                <li> <a href="Advanced.html" class="GuideList">Advanced</a></li>
-            </ul>
+            <br>
+            <h1>Guide Contents</h1> 
+            <p>Below is a list to all the things that will be covered within this guide. Please select one of the links to be redirected to the content:</p>
+                <ul class="GuideTableOfContentsList">
+                    <li> <a href="Index.html" class="GuideList">Home</a></li>
+                    <li> <a href="Introduction.html" class="GuideList">Introduction</a></li>
+                    <li> <a href="Overview.html" class="GuideList">Overview</a></li>
+                    <li> <a href="Ability Overview.html" class="GuideList">Ability Overview</a></li>
+                    <li> <a href="Builds & Talents.html" class="GuideList">Builds & Talents</a></li>
+                    <li> <a href="Rotation.html" class="GuideList">Rotation</a></li>
+                    <li> <a href="Cooldown Usage.html" class="GuideList">Cooldown Usage</a></li>
+                    <li> <a href="Enchancements.html" class="GuideList">Enchancements</a></li>
+                    <li> <a href="Macros & Addons.html" class="GuideList">Macros & Addons</a></li>
+                    <li> <a href="Advanced.html" class="GuideList">Advanced</a></li>
+                </ul>
     </div>
         <!-- JQuery script loads -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
