Push changes for home

--- a/Guide.html
+++ b/Guide.html
@@ -40,7 +40,7 @@
                 <h1>Guide Contents</h1> 
                 <p>Below is a list to all the things that will be covered within this guide. Please select one of the links to be redirected to the content:</p>
                     <ul class="GuideTableOfContentsList">
-                        <li> <a href="Index.html" class="GuideList">Home</a></li>
+                        <li> <a href="https://glynnyx.github.io/Mage-tc/" class="GuideList">Home</a></li>
                         <li> <a href="Introduction.html" class="GuideList">Introduction</a></li>
                         <li> <a href="Overview.html" class="GuideList">Overview</a></li>
                         <li> <a href="Ability Overview.html" class="GuideList">Ability Overview</a></li>
