--- a/Ability Overview.html
+++ b/Ability Overview.html
@@ -17,7 +17,7 @@
     <div>
         <!-- Left header -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Mage Theorycrafting</a>
+            <a class="navbar-brand" href="https://glynnyx.github.io/Mage-tc/">Mage Theorycrafting</a>
                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -68,10 +68,10 @@
     </div>
     <div class="GuideTableOfContents">
             <br>
-            <h1>Guide Contents</h1> 
+            <h1 class="GuideContentHeader">Guide Contents</h1> 
             <p>Below is a list to all the things that will be covered within this guide. Please select one of the links to be redirected to the content:</p>
                 <ul class="GuideTableOfContentsList">
-                    <li> <a href="Index.html" class="GuideList">Home</a></li>
+                    <li> <a href="https://glynnyx.github.io/Mage-tc/" class="GuideList">Home</a></li>
                     <li> <a href="Introduction.html" class="GuideList">Introduction</a></li>
                     <li> <a href="Overview.html" class="GuideList">Overview</a></li>
                     <li> <a href="Ability Overview.html" class="GuideList">Ability Overview</a></li>
