--- a/Builds & Talents.html
+++ b/Builds & Talents.html
@@ -17,46 +17,43 @@
     <div>
         <!-- Left header -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Mage Theorycrafting</a>
+            <a class="navbar-brand" href="https://glynnyx.github.io/Mage-tc/">Mage Theorycrafting</a>
                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
             </button>
-<!-- Nav Bar Div -->
-<!-- Nav Bar Div -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <!-- <ul class="nav nav-tabs" id="myTab" role="tablist">
-            <li class="nav-item">
-                <a class="nav-link active" id="Fire-tab" data-toggle="tab" href="#Fire" role="tab" aria-controls="Fire" aria-selected="true">Fire</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" id="Frost-tab" data-toggle="tab" href="#Frost" role="tab" aria-controls="Frost" aria-selected="false">Frost</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" id="Arcane-tab" data-toggle="tab" href="#Arcane" role="tab" aria-controls="Arcane" aria-selected="false">Arcane</a>
-            </li>
-        </ul> -->
-            <!-- <button class="Homebtn float-right"><i class="fa fa-Home" role="button" ></i><ahref=index.html></a>Home</button> -->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
         </nav>
     </div>        
-        <!-- Fire Header / Button Code -->
         <div class="tab-content" id="myTabContent">
             <!-- Text Loader -->
             <div class="IntroJumbotron" id="Fire" role="tabpanel" aria-labelledby="Fire-tab">
                 <h1>Introduction</h1>
-                <!-- <p class="lead">Welcome to my Theorycrating website. Here you can find a guide for Frost Mage as well as some simulation resourcses. 
-                <p class="lead">Please select the content you wish to see:</p> -->
             </div>
         </div>
 <!-- Start of Website description. -->
-    <div class="IntroBottom">
-                <br>
-                <h1>Welcome</h1> <br>
-                <p>Welcome to my guide. This guide has been created to provide you with all the information required to raid as a Frost Mage in World of Warcraft: Battle for Azeroth. </p>
-    </div>
-    <div class="GuideTableOfContents">
+<br>
+        <div class="IntroBottom">
+            <p>
+                <img src=https://i.imgur.com/r531154.png><br> <br>
+                <img src=https://i.imgur.com/isvlsni.png> <br> <br>
+                <p>Bone Chilling causes all chill effects to give us Bone Chilling, increasing Frost damage we deal by 0.5% for 8 sec, stacking up to 10 times.</p>
+                <p>Lonely Winter removes the ability to use Summon Water Elemental. However, it increase the damage of Frostbolt, Ice Lance and Flurry by 25%.</p>
+                <p>Ice Nova causes a whirl of icy wind around the enemy, dealing Frost damage to the target and Frost damage to all other enemies within 8 yards, and freezing them in place for 2 sec.</p>
+                <p>Bone Chilling here is the default choice as it provide you with the most damage with Lonely Winter in a very close second. Ice Nova doesn't really deal enough damage for it to be used in this tier. </p>
+            </p>
+            <img src=https://i.imgur.com/6nq7OCq.png><br><br>
+            <img src=https://i.imgur.com/PscWEoZ.png><br><br>
+            <p>Glacial Insulation also increases your armour by 200% while Ice Barrier is active. Additionally, when Ice Block fades you instantly gain Ice Barrier.</p>
+            <p>Shimmer is a talent that replaces Blink. It provides us with an additional charge, is not on global cooldown and also can be used while casting.</p>
+            <p>Ice Floes is a talent that allows your next spell to be cast while moving as long as the spell is shorter than 10 seconds, this effect has 3 chargers and you can cast it multiple times at once if a lot of movement is imminent</p>
+            <p>The default choice here is Shimmer. When used properly, it provides the best overall mobility and allows for higher dps uptime during an encounter. Ice Floes also has its place in raids when movement can be predicted and the extra Blink is not necessary. Unfortunately, Glacial Insulation gets little to no use inside raids as it simply doesn't compare to the other two talents in terms of power. </p>
+            <p>
+
+            </p>
+        </div>
+
+<!-- Start of Contents Table -->
+        <div class="GuideTableOfContents">
             <br>
-            <h1>Guide Contents</h1> 
+            <h1 class="GuideContentHeader">Guide Contents</h1> 
             <p>Below is a list to all the things that will be covered within this guide. Please select one of the links to be redirected to the content:</p>
                 <ul class="GuideTableOfContentsList">
                     <li> <a href="https://glynnyx.github.io/Mage-tc/" class="GuideList">Home</a></li>
