--- a/Introduction.html
+++ b/Introduction.html
@@ -51,12 +51,13 @@
 <!-- Start of Website description. -->
     <div class="IntroBottom">
                 <br>
-                <h1>Welcome</h1> <br>
-                <p>Welcome to my guide. This guide has been created to provide you with all the information required to raid as a Frost Mage in World of Warcraft: Battle for Azeroth. </p>
+                <h1 id="IntroHeaders">Welcome</h1> <br>
+                <p>Welcome to my guide. This guide has been created to provide you with all the information required to raid as a Frost Mage in World of Warcraft: Battle for Azeroth. </p><BR>
+                    <p>This guide was last updated on 22/08/2018.</p>
     </div>
     <div class="GuideTableOfContents">
             <br>
-            <h1>Guide Contents</h1> 
+            <h1 class="GuideContentHeader">Guide Contents</h1> 
             <p>Below is a list to all the things that will be covered within this guide. Please select one of the links to be redirected to the content:</p>
                 <ul class="GuideTableOfContentsList">
                     <li> <a href="https://glynnyx.github.io/Mage-tc/" class="GuideList">Home</a></li>
