--- a/Guide.html
+++ b/Guide.html
@@ -15,12 +15,9 @@
 
 <body>
     <div>
-
-
         <!-- Left header -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Mage Theorycrafting</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            <a class="navbar-brand" href="https://glynnyx.github.io/Mage-tc/">Mage Theorycrafting</a>            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,16 +25,16 @@
         <!-- Fire Header / Button Code -->
         <div class="tab-content" id="myTabContent">
             <!-- Text Loader -->
-            <div class="GuideJumbotron" id="Fire" role="tabpanel" aria-labelledby="Fire-tab">
-                    <h1 id="h1Guide">Welcome</h1> <br>
-                    <p id="GuideIntro">Welcome to my Frost Mage DPS guide for World Of Warcraft: Battle for Azeroth.</p>
-                    <p id="GuideIntro">Here you will find all you need to know about raiding as a Frost Mage. This guide was last updated on 16/08/2018</p>
+            <div class="IntroJumbotron" id="Fire" role="tabpanel" aria-labelledby="Fire-tab">
+                    <h1>Guide</h1>
             </div>
         </div>
 <!-- Start of Bottom Table of Contents loader. -->
         <div class="GuideTableOfContents">
-                <br>
-                <h1>Guide Contents</h1> 
+            <br>
+             <p>Welcome to my Frost Mage DPS guide for World Of Warcraft: Battle for Azeroth.</p>
+             <p>Here you will find all you need to know about raiding as a Frost Mage. This guide was last updated on 16/08/2018</p>
+                <h1 class="GuideContentHeader">Guide Contents</h1> 
                 <p>Below is a list to all the things that will be covered within this guide. Please select one of the links to be redirected to the content:</p>
                     <ul class="GuideTableOfContentsList">
                         <li> <a href="https://glynnyx.github.io/Mage-tc/" class="GuideList">Home</a></li>
